update gapmatch correctResponse table display.

--- a/plugins/gapmatchelement/gapmatchelement-dialog.css
+++ b/plugins/gapmatchelement/gapmatchelement-dialog.css
@@ -1,6 +1,6 @@
 .gapmatchelement-header {
 	font-weight: bold;
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 }
 
 .gapmatchelement-eee {
@@ -25,7 +25,7 @@
 
 .gapmatchelement-correctness {
 	position: absolute;
-	width: 64px;
+	width: 67px;
 	height: 24px;
 	display: table;
 	border-left: 2px solid transparent;
@@ -71,13 +71,25 @@
 	color: green;
 }
 
+.gapmatchelement-score-table {
+    border-collapse: collapse;
+	width:350px;
+}
+
+.gapmatchelement-score-table > thead > tr > th {
+    font-weight: 110%;
+	height: 20px;
+    text-align:center;
+}
+
+.gapmatchelement-header-score {
+	width:68px;
+}
+
 .gapmatchelement-textinput {
 	border: 1px solid #aaa;
 	padding: 4px;
-	position: absolute;
-	left: 66px;
-	right: 30px;
-	width: 296px;
+	width: 100%;
 }
 
 .gapmatchelement-rowcontrols {
